tests/arch/mips/error/executor/test_mips_error_executor_003.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.text
main:
    li $sp, 0
    jr $ra
